# litert-inference

./: .gitmodules  README.md
gemma-3/: README.md
gemma-3/export/: export_gemma3_270m.py  requirements.txt  verify_litertlm.py
gemma-3/inference/: .gitignore  CMakeLists.txt  README.md
gemma-3/inference/include/: gemma_engine.h
gemma-3/inference/platform/android/: gemma_jni.cpp
gemma-3/inference/platform/ios/: GemmaBridge.mm
gemma-3/inference/scripts/: build_android.sh  build_desktop.sh  build_ios.sh  fetch_prebuilt.sh
gemma-3/inference/src/: gemma_engine.cpp  test_main.cc
